samples/_failures_safe/1761129661_ac3e80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b63bdbf1.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_b63bdbf1.c:161:9: error: expected declaration or statement at end of input
  161 |         queue_destroy(&q);
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_b63bdbf1.c:161:9: error: expected declaration or statement at end of input
